--- a/admin/style.css
+++ b/admin/style.css
@@ -18,6 +18,7 @@ html{
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-y: hidden;
 }
 
 ::placeholder{
@@ -149,3 +150,74 @@ body{
 }
 
 /* Form Container Styling Ends Here */
+
+/* Dashboard Styling Starts Here */
+
+.dashboard-container{
+    width: 100%;
+    height: 100dvh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+    border: 4px solid var(--bg-color);
+    gap: 10px;
+}
+
+.sidebar{
+    width: 18%;
+    height: 96dvh;
+    padding: 15px;
+    border-radius: 10px;
+    background: var(--bg-color);
+    color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.top img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+
+.top h1{
+    font-size: 1.8rem;
+}
+
+.middle{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 10px;
+    width: 100%;
+}
+
+.middle a{
+    padding: 10px 15px;
+    border: 2px solid var(--primary-color);
+    width: 100%;
+    color: var(--primary-color);
+    text-decoration: none;
+    border-radius: 8px;
+}
+
+.container{
+    width: 82%;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Dashboard Styling Ends Here */
