--- a/admin/style.css
+++ b/admin/style.css
@@ -231,7 +231,7 @@ body{
 }
 
 .bottom h4{
-    padding: 10px 15px;
+    padding: 8px 15px;
     border: 2px solid var(--primary-color);
     width: 100%;
     color: var(--primary-color);
@@ -245,7 +245,7 @@ body{
 }
 
 .bottom a{
-    padding: 10px 15px;
+    padding: 8px 15px;
     border: 2px solid var(--primary-color);
     width: 100%;
     background: var(--primary-color);
@@ -274,6 +274,7 @@ body{
     height: 96dvh;
     padding: 15px;
     border-radius: 8px;
+    overflow-y: auto;
 }
 
 .container .title{
@@ -283,6 +284,76 @@ body{
     color: var(--primary-color);
     border-radius: 10px;
     text-align: center;
+}
+
+.buttons{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 10px;
+    gap: 10px;
+}
+
+.buttons a{
+    padding: 10px 15px;
+    background: var(--bg-color);
+    color: var(--primary-color);
+    border-radius: 8px;
+    font-size: 0.9rem;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+.content table{
+    margin-top: 10px;
+    width: 100%;
+    text-align: center;
+}
+
+.content table{
+    margin-top: 20px;
+    width: 100%;
+    text-align: center;
+    border-collapse: collapse;
+    border: 2px solid var(--bg-color);
+}
+
+.content tr{
+    padding: 10px;
+}
+
+.content tr th{
+    padding: 10px;
+    background: var(--bg-color);
+    color: var(--primary-color);
+}
+
+.content tr td{
+    padding: 10px;
+    border: 2px solid var(--bg-color);
+    font-weight: 500;
+    font-size: 1rem;
+    text-transform: capitalize;
+}
+
+.content tr td a{
+    display: flex;
+    flex-direction: column;
+    background: var(--bg-color);
+    color: var(--primary-color);
+    padding: 10px;
+    text-decoration: none;
+}
+
+.content tr td a:hover{
+    display: flex;
+    flex-direction: column;
+    background: var(--bg-color);
+    color: var(--primary-color);
+    padding: 10px;
+    text-decoration: none;
 }
 
 /* Dashboard Styling Ends Here */
