--- a/admin/style.css
+++ b/admin/style.css
@@ -7,7 +7,7 @@
 :root{
     --primary-color: #fff;
     --bg-color: black;
-    --bg-color-hover: rgb(25, 25, 25);
+    --bg-color-hover: rgb(45, 45, 45);
     --black: black;
 }
 
@@ -304,6 +304,11 @@ body{
     font-size: 0.9rem;
     font-weight: 500;
     text-decoration: none;
+    transition: 0.3s ease-in;
+}
+
+.buttons a:hover{
+    background: var(--bg-color-hover);
 }
 
 .content table{
@@ -325,7 +330,7 @@ body{
 }
 
 .content tr th{
-    padding: 10px;
+    padding: 15px;
     background: var(--bg-color);
     color: var(--primary-color);
 }
@@ -354,6 +359,45 @@ body{
     color: var(--primary-color);
     padding: 10px;
     text-decoration: none;
+}
+
+.content form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border: 3px solid var(--bg-color);
+    margin-top: 20px;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+.content form label{
+    font-weight: 500;
+    font-size: 1rem;
+    margin-top: 5px;
+}
+
+.content form input{
+    padding: 10px;
+    margin-top: 3px;
+    border: 2px solid var(--bg-color);
+    border-radius: 8px;
+}
+
+.content form button{
+    padding: 10px;
+    margin-top: 15px;
+    border: none;
+    background: var(--bg-color);
+    color: var(--primary-color);
+    border-radius: 8px;
+    width: 25%;
+    font-weight: 700;
+    font-size: 0.9rem;
+}
+
+.content form button:hover{
+    background: var(--bg-color-hover);
 }
 
 /* Dashboard Styling Ends Here */
