--- a/admin/style.css
+++ b/admin/style.css
@@ -384,6 +384,13 @@ body{
     border-radius: 8px;
 }
 
+.content form select{
+    padding: 10px;
+    margin-top: 3px;
+    border: 2px solid var(--bg-color);
+    border-radius: 8px;
+}
+
 .content form button{
     padding: 10px;
     margin-top: 15px;
