--- a/admin/style.css
+++ b/admin/style.css
@@ -368,6 +368,14 @@ body{
     border-radius: 8px;
 }
 
+.content form textarea{
+    padding: 10px;
+    margin-top: 3px;
+    border: 2px solid var(--bg-color);
+    border-radius: 8px;
+    resize: vertical;
+}
+
 .content form button{
     padding: 10px;
     margin-top: 15px;
