--- a/admin/style.css
+++ b/admin/style.css
@@ -398,4 +398,63 @@ body{
     background: var(--bg-color-hover);
 }
 
+/* Dashboard Container Starts Here */
+
+.dashboard-card-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    border-radius: 8px;
+    border: 3px solid var(--bg-color);
+    gap: 20px;
+    padding: 10px;
+}
+
+.dashboard-card{
+    width: 40%;
+    background: var(--bg-color);
+    color: var(--primary-color);
+    padding: 10px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.dashboard-card img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+
+.dashboard-card h4{
+    margin-top: 10px;
+    font-size: 1.3rem;
+}
+
+.dashboard-card a{
+    padding: 4px 15px;
+    border: 2px solid var(--primary-color);
+    background: var(--primary-color);
+    color: var(--bg-color);
+    text-align: center;
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 700;
+    margin-top: 10px;
+    border-radius: 50px;
+    width: 25%;
+    transition: 0.3s ease-in;
+}
+
+.dashboard-card a:hover{
+    background: transparent;
+    color: var(--primary-color);
+}
+
+/* Dashboard Container Ends Here */
+
 /* Dashboard Styling Ends Here */
